--- a/regular-expressions-pract/index.html
+++ b/regular-expressions-pract/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-
+<!---->
 </body>
 </html>
 <script>
@@ -215,33 +215,33 @@
     // console.log("bbb /aaa\ bbb /ccc\".replace(//.+\\/g, "!"));
 
     // Задачи на регулярные выражения JavaScript. Часть 3
-
+    //
     // Задачи для решения
     // На карманы при замене
-
+    //
     // Дана строка 'aaa@bbb eee7@kkk'. Напишите регулярку, которая найдет строки по шаблону:
     // любое количество букв и цифр, символ @, любое количество букв и цифр и поменяет местами то,
     // что стоит до @ на то, что стоит после нее. Например, aaa@bbb должно превратиться в bbb@aaa. Показать решение.
     //
     // console.log('aaa@bbb eee7@kkk'.replace(/([a-z0-9]+)@([a-z0-9]+)/g, '$2@$1'));
-
+    //
     //     Дана строка вида 'a1b2c3'. Напишите регулярку, которая найдет все цифры и удвоит их количество
     //     таким образом: 'a11b22c33' (то есть рядом с каждой цифрой напишет такую же). Показать решение.
     //
-    //console.log('a1b2c3'.replace(/(\d)/g, '$1$1'))
-
+    // console.log('a1b2c3'.replace(/(\d)/g, '$1$1'))
+    //
     //     Задачи на test и match
-
+    //
     // Задачи ниже не всегда можно решить с помощью одной только регулярки.
     // Может понадобится еще что-нибудь дописать на JavaScript (не всегда, но такое может быть).
-
+    //
     // С помощью метода test определите, что переданная строка является емэйлом.
     // Примеры емэйлов для тестирования mymail@mail.ru, my.mail@mail.ru, my-mail@mail.ru, my_mail@mail.ru,
     // mail@mail.com, mail@mail.by, mail@yandex.ru. Показать решение.
     //
     // let patt = /^[a-zA-Z0-9_\-]+\.?[a-zA-Z0-9]+@[a-zA-Z0-9]+\.[a-zA-Z]{2,3}$/;
     // console.log(patt.test('mail@yandex.ru'));
-
+    //
     //     Дана строка с текстом, в котором могут быть емейлы.
     //     С помощью match найдите все емэйлы в виде массива. Показать решение.
     //
@@ -249,42 +249,42 @@
     // let patt = /([a-zA-Z0-9_\-]+\.?[a-zA-Z0-9]+@[a-zA-Z0-9]+\.[a-zA-Z]{2,3})/g;
     //
     // str.match(patt).forEach(value => console.log(value));
-
+    //
     //     С помощью test определите, что переданная строка является доменом.
     //     Примеры доменов: site.ru, site.com, my-site.com. Показать решение.
     //
     // let patt = /^[a-zA-Z\-]+\.?[a-zA-Z]+\.?[a-zA-Z]{2,3}$/
     // console.log(patt.test('my-site.com'));
-
+    //
     //     С помощью test определите, что переданная строка является доменом.
     //     Примеры доменов: http://site.ru, http://site.com. Показать решение.
     //
     // let patt = /^(http:\/\/)[a-zA-Z\-]+\.?[a-zA-Z]+\.?[a-zA-Z]{2,3}$/
     // console.log(patt.test('http://site.com'));
-
+    //
     //     С помощью test определите, что переданная строка является доменом вида http://site.ru.
     //     Протокол может быть как http, так и https. Показать решение.
     //
     // let patt = /^(http:\/\/)|(https:\/\/)[a-zA-Z\-]+\.?[a-zA-Z]+\.?[a-zA-Z]{2,3}$/
     // console.log(patt.test('https://site.com'));
-
+    //
     //     С помощью test определите, что переданная строка начинается с http или с https. Показать решение.
     //
     // let patt = /^(http:\/\/)|(https:\/\/)/;
     // console.log(patt.test('http://site.com'));
-
-
+    //
+    //
     //     С помощью test определите, что переданная строка заканчивается расширением txt, html или php.
     //     Показать решение.
     //
     // let patt = /(php)|(html)|(txt)$/;
     // console.log(patt.test('asdf.txt'));
-
+    //
     //     С помощью test определите, что переданная строка заканчивается расширением jpg или jpeg. Показать решение.
     //
     // let patt = /(jpeg)|(jpg)$/;
     // console.log(patt.test('asdf.jpg'));
-
+    //
     //     С помощью test узнайте является ли строка числом, длиной до 12 цифр. Показать решение.
     //
     // let patt = /\d{1,12}/;
@@ -307,67 +307,110 @@
     //     }
     //     return sum
     // }
-
+    //
     //     Задачи на replace
+    //
     // С помощью replace замените в строке домены вида http://site.ru, http://site.com на
     // <a href="http://site.ru">site.ru</a>. Показать решение.
     //
-    let patt = /^(http:\/\/)([a-zA-Z\-]+\.?[a-zA-Z]+\.?[a-zA-Z]{2,3}$)/;
-    console.log('http://site.com'.replace(patt, '<a href=$1>$2</a>'));
-
+    // let patt = /^(http:\/\/)([a-zA-Z\-]+\.?[a-zA-Z]+\.?[a-zA-Z]{2,3}$)/;
+    // console.log('http://site.com'.replace(patt, '<a href=\"$&\">$2</a>'));
+    //
     //     С помощью replace замените все повторяющиеся пробелы на один. Показать решение.
+    //
+    // let patt = /\s+/g;
+    // console.log('a   d f  f    g  h'.replace(patt, ' '));
     //
     //     Найдите и удалите все комментарии CSS. Показать решение.
     //
+    // let patt = /^\/\*.+\*\/$/g;
+    // console.log('/*fgregergegerg64889846354-*/*3495348#@^%^$&*/'.replace(patt, ''));
+    //
     //     Найдите и удалите все комментарии HTML. Показать решение.
+    // let patt = /<!--.+-->/g;
+    // console.log('<!--na   d f  f    g  h-->'.replace(patt, ''));
 
     // Задачи на регулярные выражения JavaScript. Часть 4
     //
     //     Задачи для решения
+    //
     // На позитивный и негативный просмотр
     //
     // С помощью позитивного и негативного просмотра найдите все строки по шаблону 3 буквы a,
     // затем буква b и поменяйте 3 буквы a на знак '!'. То есть из 'aaab' нужно сделать '!b'. Показать решение.
     //
+    // let patt = /aaa(?=b)/g
+    // console.log('aaab aaaf'.replace(patt, '1'));
+    //
     //     С помощью позитивного и негативного просмотра найдите все строки по шаблону 3 буквы a,
     //     затем любая буква, но не b и поменяйте 3 буквы a на знак '!'. То есть из, к примеру, 'aaaw' нужно
     //     сделать '!w', а 'aaab' не поменяется. Показать решение.
     //
-
+    // let patt = /aaa(?!b)/g
+    // console.log('aaab aaaf'.replace(patt, '1'));
+    //
     //     На replace
-
+    //
     // Дана строка с целыми числами. С помощью регулярки преобразуйте строку так,
     // чтобы вместо этих чисел стояли их квадраты. Показать решение.
+    //
+    // let patt = /\d/g;
+    // '1234567'.replace(patt, value => console.log(value*value));
+    //
     //
     //     Дана строка с целыми числами. Найдите числа, стоящие в кавычках и увеличьте их в два раза.
     //     Пример: из строки 2aaa'3'bbb'4' сделаем строку 2aaa'6'bbb'8'. Показать решение.
     //
+    // let patt = /\d(?=')/g
+    // console.log("2aaa'3'bbb'4'".replace(patt, value => value * 2 ));
+    //
     //     Дана строка в которой есть вставки {{текст}}. Найдите все такие вставки и поменяйте в них порядок
     //     букв на обратный (то есть из 'текст' нужно сделать 'тскет'). Показать решение.
+    //
+    // let patt = /текст+(?=})/g
+    // console.log('{{текст}}'.replace(patt, value => Array.from(value).reverse().join('')));
     //
     //     Дана строка '23 + 35 ='. Числа могут быть любыми. Выведите на экран результат операции в виде
     //     '23 + 35 = 58'. Показать решение.
     //
-
+    // let patt = /(\d+)\s\+\s(\d+)\s=/g;
+    // console.log('23 + 35 ='.replace(patt, function (match, match1, match2) {
+    //     let sum = Number(match1) + Number(match2);
+    //
+    //     return match + ' ' + sum;
+    // }));
+    //
+    //
     //     Головоломки
-
+    //
     // Определите, что год находится в интервале от 1900 до 2100 с помощью одного только регулярного выражения.
     // Показать решение.
+    //
+    //       console.log(/^(19\d\d|20\d\d|21\d\d)$/g.test('1900'));
     //
     //     С помощью test определите, что переданная строка является корректным временем вида
     //     '12:59', '23:41', '00:12', '00:00', '09:15'. Время '24.00', '25.00', '12.60', '12.93', '41.93'
     //     является некорректным. Показать решение.
     //
+    // console.log(/^(\d\d):(\d\d)/g.test('12.59'));
+    //
     //     С помощью test определите, что переданная строка является корректным временем вида
     //     '9.59 am', '12.30 pm'. Показать решение.
+    //
+    // console.log(/^(\d\d)\.(\d\d)\s(pm|am)/g.test('12.30'));
     //
     //     Удалите одной регуляркой все слова из предложения, содержащие две одинаковые следующие
     //     друг за другом буквы. Показать решение.
     //
+    // console.log("aaa zzqzqaq hsdds".replace(/(\w)\1/g, ""));
+    //
     //     Удалите одной регуляркой все повторяющиеся слова из строки, например для 'dsf xxx xxx sd'
     //     должно вернуть 'dsf xxx sd'. Показать решение.
     //
+    // console.log('dsf xxx xxx sd'.replace(/\b((.+)\s+)\1/g, ""));
+    //
     //     Решите предыдущую задачу с учетом того, что слово может повторяться много раз.
     //     Например 'dsf xxx xxx xxx xxx xxx sd' должно вернуть 'dsf xxx sd'. Показать решение.
+    // console.log('dsf xxx xxx xxx xxx xxx sd'.replace(/(\b(.+)\s+)\1{2,}/g, ""));
 
 </script>
