--- a/cookie-pract/index.html
+++ b/cookie-pract/index.html
@@ -6,9 +6,30 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script type=" text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+<style>
+    .nav {
+        margin-left: 60px;
+
+    }
+    div.nav {
+        display: inline-block;
+    }
+    a:link, a:visited {
+        text-decoration: none;
+        color: black;
+    }
+    a:hover {
+        color: red;
+    }
+</style>
+
 </head>
 <body>
-<textarea id="text" style="width: 200px; height: 200px;"></textarea>
+<div class="nav">
+    <a href="#" id="prev">&larr;</a>
+    <a href="#" id="next">&rarr;</a>
+</div><br>
+<input>
 </body>
 </html>
 <script>
