--- a/cookie-pract/index.html
+++ b/cookie-pract/index.html
@@ -46,21 +46,21 @@
     //
     // Основы работы
     //
-
+    //
     // Установите куку с именем 'name' и значением 'Иван'. Выведите содержимое этой куки на экран. Показать решение.
     //
     // $.cookie('name', 'Иван');
     // console.log($.cookie('name'));
-
+    //
     //     Установите куку с вашем именем и вашим возрастом. Выведите на экран содержимое этих двух кук.
     //     Показать решение.
     //
     // $.cookie('name', 'UserName');
     // $.cookie('age', 'UserAge');
     // console.log($.cookie('name') + ' ' + $.cookie('age'));
-
+    //
     //     Практика
-
+    //
     // Дан инпут. Ведите в него город, например, Минск. Сохраните его в куки.
     // Зайдя на другую страницу сайта вы должны увидеть фразу 'ваш город - Минск'. Показать решение.
     //
@@ -70,8 +70,8 @@
     // console.log(document.cookie);
     // });
     // document.onloadeddata(alert('ваш город - ' + $.cookie('city')));
-
-
+    //
+    //
     //     При заходе на страницу спросите с помощью инпута день рождения пользователя.
     //     Когда он зайдет с следующий раз - напишите сколько месяцев, дней, часов, минут и секунд осталось
     //     до его дня рождения. И пусть по этим числам запуститься обратный отсчет (то есть они будут тикать).
@@ -111,7 +111,7 @@
     //     }
     // });
     // с таймером какая - то дичь(
-
+    //
     //     Дана форма с инпутами. Пользователь вводит какие-то данные и закрывает страницу
     //     (не факт, что он заполнил всю форму). Сделайте так, чтобы при следующем заходе на страницу
     //     введенные им ранее данные стояли на своих местах. Показать решение.
@@ -126,7 +126,7 @@
     //     inputValue.value = $.cookie('inputValue');
     //     console.log($.cookie('inputValue'))
     // }
-
+    //
     //     Даны чекбоксы. Пользователь произвольно отмечает их и закрывает страницу.
     //     Сделайте так, чтобы при следующем заходе на страницу чекбоксы стали отмеченными так,
     //     как это сделал пользователь ранее. Показать решение.
@@ -149,8 +149,8 @@
     //         checkboxes[value].checked = true;
     //     }
     // })
-
-
+    //
+    //
     //     При заходе на страницу появляется счетчик обратного отсчета.
     //     Когда он доходит до нуля, на странице пишется - 'отсчет закончен'.
     //     При обновлении страницы счетчик не должен начинать идти заново. Показать решение.
@@ -169,7 +169,7 @@
     //         }
     //     }, 1000);
     // }
-
+    //
     //     Дан тектареа. Пользователь может потянуть за его угол и изменить его размер.
     //     Сделайте так, чтобы при следующем заходе на страницу, текстареа был заданного размера. Показать решение.
     // let text = document.getElementById('text');
@@ -189,7 +189,7 @@
     //         $.cookie('height', this.style.height);
     //     }
     // })
-
+    //
     //     Дан инпут. В него можно ввести данные, затем поредактировать их, затем еще поредактировать.
     //     Пусть инпут хранит историю своих изменений (даже после перезагрузки страницы).
     //     Сверху над инпутом должны появится стрелочки, с помощью которых можно перемещаться по истории.
@@ -243,7 +243,7 @@
     //         return JSON.parse($.cookie(cookieName));
     //     } else false;
     // }
-
+    //
     //     Дан сайт. Пусть каждая страница для каждого посетителя хранит время последнего захода и количество
     //     заходов на нее этим посетителем. Пусть эти данные показываются при заходе в формате 'с последнего захода
     //     прошло ... вы посещали эту страницу ... раз'. Показать решение.
@@ -262,27 +262,39 @@
     //     }
     //
     // });
-
+    //
     //     Пусть по заходу на страницу показывается определенный рекламный текст.
     //     Рядом с ним сделайте кнопку 'убрать', по нажатию на которую этот рекламный текст не показывается этому
     //     пользователю ровно один день.
-
-    let hide = document.getElementById('hide');
-    let ad = document.getElementById('ad');
-
-    hide.addEventListener("click", function () {
-        let date = new Date();
-        $.cookie('date', date);
-        ad.classList.add('hide');
-        hide.classList.add('hide');
-    });
-
-
-
-
-
-
-
+    //
+    // let hide = document.getElementById('hide');
+    // let ad = document.getElementById('ad');
+    //
+    //
+    // $(document).ready(function () {
+    //
+    //     if (new  Date() - new Date($.cookie('date')) < 86400000) {
+    //
+    //         ad.classList.add('hide');
+    //         hide.classList.add('hide');
+    //
+    //     } else{
+    //         ad.classList.remove('hide');
+    //         hide.classList.remove('hide');
+    //
+    //     }
+    // });
+    //
+    // hide.addEventListener("click", function () {
+    //
+    //     let date = new Date();
+    //     $.cookie('date', date);
+    //     ad.classList.add('hide');
+    //     hide.classList.add('hide');
+    //
+    //
+    //
+    // });
 
 
 </script>
